ds-93: fix form field spacing

--- a/packages/components/bolt-form/src/form.scss
+++ b/packages/components/bolt-form/src/form.scss
@@ -122,7 +122,14 @@ $bolt-input-transition: $bolt-transition;
 }
 
 @mixin _bolt-input-text-and-background {
-  padding: calc(var(--bolt-spacing-y-medium) / 2) var(--bolt-spacing-x-small); // [Mai] medium/2 matches button vertical spacing.
+  padding-top: calc(
+    var(--bolt-spacing-y-medium) / 2 - 1px
+  ); // [Mai] medium/2 matches button vertical spacing.
+  padding-right: 5ch;
+  padding-bottom: calc(
+    var(--bolt-spacing-y-medium) / 2 - 1px
+  ); // [Mai] medium/2 matches button vertical spacing.
+  padding-left: var(--bolt-spacing-x-small);
   font-family: var(--bolt-type-font-family-body);
   font-size: var(--bolt-type-font-size-small);
   color: $bolt-input-text-color;
@@ -130,6 +137,12 @@ $bolt-input-transition: $bolt-transition;
     var(--bolt-type-line-height-xsmall) * 1em - 1px
   ); // [Mai] The line-height matches button's line-height, the 1px offsets the 1px border from the input.
   background-color: $bolt-input-background-color;
+
+  @include bolt-mq($until: small) {
+    padding-top: calc(var(--bolt-spacing-y-medium) / 2 - 0.1875rem);
+    padding-bottom: calc(var(--bolt-spacing-y-medium) / 2 - 0.25rem);
+    font-size: 16px; // [Mai] Mobile Safari will zoom in when input is focused if the text is not at least 16px.
+  }
 }
 
 .c-bolt-input {
@@ -155,12 +168,6 @@ $bolt-input-transition: $bolt-transition;
   transition: all $bolt-input-transition;
   text-overflow: '';
 
-  @include bolt-mq($until: small) {
-    padding-top: calc(var(--bolt-spacing-y-medium) / 2 - 2px);
-    padding-bottom: calc(var(--bolt-spacing-y-medium) / 2 - 3px);
-    font-size: 16px; // [Mai] Mobile Safari will zoom in when input is focused if the text is not at least 16px.
-  }
-
   &::-ms-expand {
     display: none;
   }
@@ -185,8 +192,8 @@ $bolt-input-transition: $bolt-transition;
 
   &.is-filled,
   &:focus {
-    padding-top: calc(var(--bolt-spacing-y-medium) / 2 + 0.55rem);
-    padding-bottom: calc(var(--bolt-spacing-y-medium) / 2 - 0.55rem);
+    padding-top: calc(var(--bolt-spacing-y-medium) / 2 + 0.55rem - 1px);
+    padding-bottom: calc(var(--bolt-spacing-y-medium) / 2 - 0.55rem - 1px);
   }
 
   &:hover {
@@ -222,13 +229,6 @@ $bolt-input-transition: $bolt-transition;
     right: 1px;
     left: 1px;
     pointer-events: none;
-
-    @include bolt-mq($until: small) {
-      font-size: 16px; // [Mai] Mobile Safari will zoom in when input is focused if the text is not at least 16px.
-      line-height: calc(
-        var(--bolt-type-line-height-xsmall) * 1em - 6px
-      ); // [Mai] This is just magic number, if the font-size ever changes, this also needs to change by inspecting in the browser and push the px.
-    }
 
     &:before,
     &:after {
@@ -416,17 +416,16 @@ $bolt-input-transition: $bolt-transition;
   top: 1px;
   right: 1px;
   padding-top: calc(
-    var(--bolt-spacing-y-medium) / 2 - 3px
-  ); // [Mai] This 3px is a magic number that will make sure both English and Japanese spacing settings work with the icon's vertical alignment.
+    var(--bolt-spacing-y-medium) / 2 - 0.25rem
+  ); // [Mai] This 0.3125rem is a magic number that will make sure both English and Japanese spacing settings work with the icon's vertical alignment.
   padding-right: var(--bolt-spacing-x-small);
-  padding-bottom: 2px;
+  padding-bottom: 1px;
   padding-left: 0;
   font-size: var(--bolt-type-font-size-small);
   color: $bolt-input-icon-color;
   line-height: var(--bolt-type-line-height-small);
   pointer-events: none;
   border-radius: $bolt-input-border-radius;
-  background-color: $bolt-input-background-color;
 
   &:before {
     content: '';
@@ -446,8 +445,6 @@ $bolt-input-transition: $bolt-transition;
 .c-bolt-input.is-invalid,
 .c-bolt-input.is-touched:invalid {
   & ~ .c-bolt-input-icons {
-    background-color: $bolt-input-background-color--invalid;
-
     &:before {
       background: linear-gradient(
         to left,
@@ -461,8 +458,6 @@ $bolt-input-transition: $bolt-transition;
 .c-bolt-input.is-disabled,
 .c-bolt-input:disabled {
   & ~ .c-bolt-input-icons {
-    background-color: $bolt-input-background-color--disabled;
-
     &:before {
       background: linear-gradient(
         to left,
@@ -477,11 +472,6 @@ $bolt-input-transition: $bolt-transition;
 .c-bolt-custom-input.is-active {
   & ~ .c-bolt-input-icons {
     color: $bolt-input-icon-color--active;
-    @include bolt-css-vars(
-      (
-        --bolt-theme-icon: $bolt-input-icon-color--active,
-      )
-    );
   }
 }
 
@@ -501,11 +491,6 @@ $bolt-input-transition: $bolt-transition;
 .c-bolt-input-icon--invalid {
   display: none; // The invalid icon will always be present and simply un-hidden when a field becomes invalid
   color: $bolt-input-icon-color--invalid;
-  @include bolt-css-vars(
-    (
-      --bolt-theme-icon: $bolt-input-icon-color--invalid,
-    )
-  );
 }
 
 .c-bolt-input.is-invalid ~ .c-bolt-input-icons,
